Fix z-indexes between menu and portfolio on tablets

--- a/src/sass/modules/_global_modules.scss
+++ b/src/sass/modules/_global_modules.scss
@@ -20,7 +20,7 @@
 			color: $body_bg;
 			padding: $base_line_height $base_line_height ( $base_line_height / 2 ) $base_line_height;
 			background-image: linear-gradient( to bottom, rgba( 0,0,0,0 ) 0%, rgba( 0,0,0, 0.5 ) 100% );
-			z-index: 100;
+			z-index: 80;
 
 				&__heading {
 					font-size: 30px;
